prusti-tests/tests/parse/ui/predicate_fail-2.stderr
error: Cannot use `#[predicate]` on bodyless functions
  --> $DIR/predicate_fail-2.rs:11:1
   |
11 | fn result_is_one() -> bool;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: you can only use `#[predicate]` on function definitions
  --> $DIR/predicate_fail-2.rs:15:1
   |
15 | static FOO: usize = 0;
   | ^^^^^^

error: aborting due to 2 previous errors

